--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # dependencies
-/node_modules
+/backend/node_modules
+/frontend/node_modules
+/frontend/build
 /.pnp
 .pnp.js
 
@@ -9,6 +11,7 @@
 
 # production
 /build
+
 
 # misc
 .DS_Store
